--- a/cmd/Makefile
+++ b/cmd/Makefile
@@ -70,7 +70,7 @@ obj-$(CONFIG_CMD_FUSE) += fuse.o
 obj-$(CONFIG_CMD_GETTIME) += gettime.o
 obj-$(CONFIG_CMD_GPIO) += gpio.o
 obj-$(CONFIG_CMD_HVC) += smccc.o
-obj-$(CONFIG_CMD_I2C) += i2c.o
+obj-$(CONFIG_CMD_I2C) += i2c.o setserial.o
 obj-$(CONFIG_CMD_IOTRACE) += iotrace.o
 obj-$(CONFIG_CMD_HASH) += hash.o
 obj-$(CONFIG_CMD_IDE) += ide.o disk.o
